<resources>
    <string name="app_name">CAR</string>
    <string name="accident_title">Accident Report Manager</string>
    <string name="previous_accidents">Previous Accidents</string>
    <string name="new_accident">New Accident</string>
    <string name="profile_label">Profile</string>
    <string name="firstName_label">First Name: </string>
    <string name="lastName_label">Last Name: </string>
    <string name="email_label">Email: </string>
    <string name="phoneNumber_label">Phone Number: </string>
    <string name="address_label">Address: </string>
    <string name="driverName_label">DriverName: </string>
    <string name="id_label">ID:</string>
    <string name="carNumber_label">Car Number: </string>
    <string name="carModel_label">Car Model: </string>
    <string name="carColor_label">Car Color: </string>
    <string name="licenceNumber_label">Licence Number: </string>
    <string name="ownerAddress_label">Owner Address: </string>
    <string name="ownerPhoneNumber_label">Owner Phone Number: </string>
    <string name="insuranceCompanyName_label">Insurance Company Name: </string>
    <string name="insurancePolicyNumber_label">Insurance Policy Number: </string>
    <string name="insuranceAgentName_label">Insurance Agent Name: </string>
    <string name="insuranceAgentPhoneNum_label">Insurance Agent Phone Number: </string>
    <string name="dataBase_mainActivity_paths">Profiles</string>
    <string name="show_accidents">SHOW ACCIDENTS</string>
    <string name="show_all_your_previous_accidents">Show all your previous accidents</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="scan_the_other_driver_s_qr_code_to_swipe_details">Scan the other driver\'s QR CODE to swap details</string>
    <string name="emergency_services">EMERGENCY SERVICES</string>
    <string name="call_to_one_of_the_needed_emergency_services_police_fire_fighters_and_mada">Call to: The Police, Fire Fighters or MADA</string>
    <string name="welcomeLbl">welcome:</string>
    <string name="accident_page_title">My Reports</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="save">Save</string>
    <string name="edit_lbl">Edit</string>
    <string name="call_to_the_police_emergency_dispatch_center">Call to the Police\'s emergency dispatch center</string>
    <string name="call_to_the_mada_emergency_dispatch_center">Call to the Mada\'s emergency dispatch center</string>
    <string name="call_to_the_fire_emergency_dispatch_center">Call to the Fire Fighters\'s emergency dispatch center</string>
    <string name="police_emergency_services">Police Emergency Services</string>
    <string name="mada_emergency_services">Mada Emergency Services</string>
    <string name="fire_fighters_emergency_services">Fire Fighters Emergency Services</string>
    <string name="emergency_services_headline">Emergency Services</string>
    <string name="accident_date_time">"Date and time: "</string>
    <string name="accident_profiles_details">Other driver info</string>
    <string name="accident_photos_txt">Images</string>
    <string name="password_txt_main_page">Password</string>
    <string name="username_hint">UserName</string>
    <string name="main_activity_register_lbl">Register</string>
    <string name="main_activity_log_in_lbl">Log in</string>
    <string name="main_activity_log_in_text">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="accident_information_lbl_after_scanning">Accident information</string>
    <string name="aacident_after_scanning_date_lbl">Date</string>
    <string name="accident_after_scanning_date_lbl">Date:</string>
    <string name="accident_after_scanning_time_lbl">Time:</string>
    <string name="aacident_after_scanning_location_lbl">Location:</string>
    <string name="aacident_qr_code_lbl">Accident QR Code: </string>
    <string name="see_other_driver_s_details">Click me to see the other driver\'s details</string>
    <string name="see_witnes_s_details">Click me to see the witness details</string>
    <string name="more_details_btn_text">more details</string>
    <string name="accidents_history">Accidents history</string>
    <string name="hint_enter_user_name">Enter: User Name</string>
    <string name="hint_enter_first_name">Enter: First Name</string>
    <string name="hint_enter_last_name">Enter: Last Name</string>
    <string name="hint_enter_mail_abc_gmail_com">Enter mail: abc@gmail.com</string>
    <string name="hint_enter_password">Enter: Password</string>
    <string name="hint_enter_password_again">Enter: Password Again</string>
    <string name="lbl_submit_register">Submit</string>
    <string name="regiser_txt_log_in">Log In</string>
    <string name="welcome_to_car_application_n_create_an_account">Welcome to CAR application \n Create an Account.</string>

</resources>
