<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGray2"
    tools:context=".PopWindowUserInfo">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blueForHeadline"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_centerInParent="true"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/profile"
            android:paddingTop="10dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textSize="26sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/phoneNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phoneNumberLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumber_label" />

                <EditText
                    android:id="@+id/phoneNumberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/addressRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumberRow">

                <TextView
                    android:id="@+id/addressLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label" />

                <EditText
                    android:id="@+id/addressEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/driverNameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressRow">

                <TextView
                    android:id="@+id/driverNameLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driverName_label" />

                <EditText
                    android:id="@+id/driverNameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/idRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/driverNameRow">

                <TextView
                    android:id="@+id/idLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_label" />

                <EditText
                    android:id="@+id/idEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/carNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idRow">

                <TextView
                    android:id="@+id/carNumberLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carNumber_label" />

                <EditText
                    android:id="@+id/carNumberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/carModelRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/carNumberRow">

                <TextView
                    android:id="@+id/carModelLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carModel_label" />

                <EditText
                    android:id="@+id/carModelEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/carColorRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/carModelRow">

                <TextView
                    android:id="@+id/carColorLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carColor_label" />

                <EditText
                    android:id="@+id/carColorEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/licenceNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/carColorRow">

                <TextView
                    android:id="@+id/licenceNumberLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/licenceNumber_label" />

                <EditText
                    android:id="@+id/licenceNumberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/ownerAddressRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/licenceNumberRow">

                <TextView
                    android:id="@+id/ownerAddressLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ownerAddress_label" />

                <EditText
                    android:id="@+id/ownerAddressEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/ownerPhoneNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ownerAddressRow">

                <TextView
                    android:id="@+id/ownerPhoneNumberLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ownerPhoneNumber_label" />

                <EditText
                    android:id="@+id/ownerPhoneNumberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/insuranceCompanyNameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ownerPhoneNumberRow">

                <TextView
                    android:id="@+id/insuranceCompanyNameLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insuranceCompanyName_label" />

                <EditText
                    android:id="@+id/insuranceCompanyNameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/insurancePolicyNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/insuranceCompanyNameRow">

                <TextView
                    android:id="@+id/insurancePolicyNumberLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurancePolicyNumber_label" />

                <EditText
                    android:id="@+id/insurancePolicyNumberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/insuranceAgentNameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/insurancePolicyNumberRow">

                <TextView
                    android:id="@+id/insuranceAgentNameLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insuranceAgentName_label" />

                <EditText
                    android:id="@+id/insuranceAgentNameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/insuranceAgentPhoneNumRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/insuranceAgentNameRow">

                <TextView
                    android:id="@+id/insuranceAgentPhoneNumLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insuranceAgentPhoneNum_label" />

                <EditText
                    android:id="@+id/insuranceAgentPhoneNumEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>