<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightBlue"
    tools:context=".MainMenu">

    <RelativeLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/allAccidents"
            android:layout_width="100dp"
            android:layout_height="220dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/accident_btn"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_background_blue">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/show_accidents">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/lightGray"
                    android:layout_margin="5dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/show_all_your_previous_accidents">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/scanQRCode"
            android:layout_toRightOf="@id/allAccidents"
            android:layout_width="100dp"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/allAccidents">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/scanbarcode_btn"
                    android:padding="10dp"
                    android:background="@drawable/circle_background_orange">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan_qr_code">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/lightGray"
                    android:layout_margin="5dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/scan_the_other_driver_s_qr_code_to_swipe_details">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/emergencyCall"
            android:layout_toRightOf="@id/scanQRCode"
            android:layout_width="100dp"
            android:layout_height="220dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle_background_red"
                    android:padding="10dp"
                    android:src="@drawable/call_btn">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/emergency_services">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/lightGray"
                    android:layout_margin="5dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/call_to_one_of_the_needed_emergency_services_police_fire_fighters_and_mada">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</RelativeLayout>