<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="@color/bcg_for_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/background_gradient">
        </ImageView>

        <RelativeLayout
            android:id="@+id/viewToFixPos"
            android:layout_width="match_parent"
            android:layout_height="250dp">
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editTextLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/lightGray2"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_below="@+id/viewToFixPos">

            <EditText
                android:id="@+id/editUser"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="#11000000"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginBottom="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:hint="@string/username_hint"
                android:autofillHints="UserName" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@id/editUser"
                android:layout_centerHorizontal="true"
                android:background="#11000000"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:hint="@string/password_txt_main_page"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:layout_marginBottom="30dp"
                android:autofillHints="Password" />

            <Button
                android:id="@+id/logBTN"
                android:layout_width="200dp"
                android:layout_below="@id/editPassword"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/rec_gradient"
                android:text="@string/main_activity_log_in_lbl"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/regBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:layout_below="@id/logBTN"
                android:paddingTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/darkBlue"/>

        </RelativeLayout>

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/main_activity_log_in_lbl"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>
    
    <ImageView
        android:layout_centerHorizontal="true"
        android:background="@drawable/app_logo1"
        android:paddingTop="30dp"
        android:layout_above="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ImageView>
</RelativeLayout>
